--- a/MovieDB/Views/MoviePlayList/Delete.cshtml
+++ b/MovieDB/Views/MoviePlayList/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model MovieDB.Models.MoviePlayList
+﻿@model MovieDB.Models.PlayList
 
 @{
     ViewData["Title"] = "Delete a Movie Playlist";
@@ -7,13 +7,12 @@
 <h2>Are you sure to delete this movie playlist?</h2>
 
 <div>
-    <p>Movie name: @Model.MovieName</p>
+    <p>PlayList name: @Model.PlayListName</p>
 </div>
 
 @using (Html.BeginForm("Delete", "MoviePlayList", FormMethod.Post))
 {
     @Html.HiddenFor(m => m.PlayListId)
-    @Html.HiddenFor(m => m.MovieId)
     <button type = "submit" class="btn btn-primary">Delete</button>
     <a href="@Url.Action("Index")" class="btn btn-secondary">Cancel</a>
 }
