Added movie support for playlists

--- a/MovieDB/Views/MoviePlayList/Create.cshtml
+++ b/MovieDB/Views/MoviePlayList/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Create a Playlist";
+    var moviesList = ViewData["movies"] as List<MovieDB.Models.Movie>;
 }
 
 <h2>Create a Playlist</h2>
@@ -13,6 +14,17 @@
         @Html.TextBoxFor(m => m.PlayListName)
         @Html.ValidationMessageFor(m => m.PlayListName, "", new { @class = "text-danger " })
     </div>
+
+    <h3>Add Movies</h3>
+    @foreach (var movie in moviesList)
+    {
+        <div>
+            <input type="checkbox" name="selectedMovieIds" value="@movie.MovieId" />
+            @movie.Title
+        </div>
+    }
+
+
     <button type="submit" class="btn btn-primary">Create</button>
 }
 
