Movie and playlist table updates in DAL

--- a/MovieDB/Views/MoviePlayList/Update.cshtml
+++ b/MovieDB/Views/MoviePlayList/Update.cshtml
@@ -2,6 +2,9 @@
 
 @{
     ViewData["Title"] = "Update Movie Playlist";
+    var moviesList = ViewData["movies"] as List<MovieDB.Models.Movie>;
+    var moviesInPlayList = ViewData["moviesInPlayList"] as List<int>;
+
 }
 
 @using (Html.BeginForm())
@@ -13,5 +16,14 @@
         @Html.TextBoxFor(m => m.PlayListName)
         @Html.ValidationMessageFor(m => m.PlayListName, "", new { @class = "text-danger" })
     </div>
+
+    <h3>Update Movies</h3>
+    @foreach (var movie in moviesList)
+    {
+        <div>
+            <input type="checkbox" name="selectedMovieIds" value="@movie.MovieId" @(moviesInPlayList.Contains(movie.MovieId) ? "checked" : "") />
+            @movie.Title
+        </div>
+    }
     <button type="submit" class="btn btn-primary">Update</button>
 }
