movie index updates

--- a/MovieDB/Views/Movie/Index.cshtml
+++ b/MovieDB/Views/Movie/Index.cshtml
@@ -12,9 +12,9 @@
             <th>Movie ID</th>
             <th>Name</th>
             <th>Year</th>
-            <th>Rating</th>
             <th>Plot</th>
             <th>Poster</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody id="movieList">
