--- a/MovieDB/Views/Shared/_Layout.cshtml
+++ b/MovieDB/Views/Shared/_Layout.cshtml
@@ -25,13 +25,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="Index">Movies</a>
                         </li>
+                        <!-- Playlist Dropdown -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="playListDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Playlists
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="playListDropdown">
+                                <li><a class="dropdown-item" asp-area="" asp-controller="MoviePlayList" asp-action="Index">View All Playlists</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="MoviePlayList" asp-action="Create">Add New Playlist</a></li>
+                            </ul>
+                        </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="MoviePlayList" asp-action="Index">Show PlayList</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="MoviePlayList" asp-action="Create">Create PlayList</a>
-                        </li>
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
