--- a/MovieDB/Views/MoviePlayList/Index.cshtml
+++ b/MovieDB/Views/MoviePlayList/Index.cshtml
@@ -11,15 +11,28 @@
         <tr>
             <th>Play List Id</th>
             <th>PlayList Name</th>
+            <th>Movies</th>
             <th>Action</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var moviePlayList in Model)
         {
+            var movieNames = string.Join(", ", moviePlayList.MoviePlayLists.Select(mp => mp.MovieName));
+            
             <tr>
                 <td>@moviePlayList.PlayListId</td>
                 <td>@moviePlayList.PlayListName</td>
+                <td>
+                    @if (string.IsNullOrEmpty(movieNames))
+                    {
+                        <span>No movies added yet.</span>
+                    }
+                    else
+                    {
+                        @movieNames
+                    }
+                </td>
                 <td>
                     <a class="btn btn-primary" href="@Url.Action("Update", new { playListId = moviePlayList.PlayListId })">Update</a>
                     <a class="btn btn-secondary" href="@Url.Action("Delete", new { playListId = moviePlayList.PlayListId })">Delete</a>
