--- a/MovieDB/Views/Home/Index.cshtml
+++ b/MovieDB/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center" style="margin: 200px">
+    <h1 class="display-4">MoviePlex</h1>
+    <p>Check out your favourite movies here.</p>
 </div>
