--- a/MovieDB/Views/Movie/Index.cshtml
+++ b/MovieDB/Views/Movie/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Movies</h2>
 
-<table class="table table-striped">
+<table class="table" style="color: #fff">
     <thead>
         <tr>
             <th>Movie ID</th>
@@ -17,7 +17,7 @@
             <th>Actions</th>
         </tr>
     </thead>
-    <tbody id="movieList">
+    <tbody id="movieList" style="color: #fff">
         @foreach (var movie in Model)
         {
             <tr>
