--- a/MovieDB/Views/MoviePlayList/Delete.cshtml
+++ b/MovieDB/Views/MoviePlayList/Delete.cshtml
@@ -13,6 +13,6 @@
 @using (Html.BeginForm("Delete", "MoviePlayList", FormMethod.Post))
 {
     @Html.HiddenFor(m => m.PlayListId)
-    <button type = "submit" class="btn btn-primary">Delete</button>
+    <button type = "submit" class="btn btn-danger">Delete</button>
     <a href="@Url.Action("Index")" class="btn btn-secondary">Cancel</a>
 }
