--- a/MovieDB/Views/MoviePlayList/Index.cshtml
+++ b/MovieDB/Views/MoviePlayList/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Movie Playlists</h2>
 
-<table class="table table-striped">
+<table class="table" style="color: #fff">
     <thead>
         <tr>
             <th>Play List Id</th>
