--- a/MovieDB/Views/Review/Create.cshtml
+++ b/MovieDB/Views/Review/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MovieDB.Models.Review
+﻿@model Review
 
 @{
     ViewData["Title"] = "Create Review";
@@ -6,31 +6,24 @@
 
 <h2>Create Review</h2>
 
-<form asp-action="Create" method="post" class="form-horizontal">
-    <div class="form-group">
-        <label asp-for="MovieName" class="control-label"></label>
-        <input asp-for="MovieName" class="form-control" />
-        <span asp-validation-for="MovieName" class="text-danger"></span>
+@using (Html.BeginForm())
+{
+    <div>
+        @Html.LabelFor(m => m.Movies)
+        @Html.DropDownListFor(m => m.Movies, new SelectList(Model.Movies, "Id", "Name"), "Select Movie")
     </div>
-    <div class="form-group">
-        <label asp-for="UserName" class="control-label"></label>
-        <input asp-for="UserName" class="form-control" />
-        <span asp-validation-for="UserName" class="text-danger"></span>
+    <div>
+        @Html.LabelFor(m => m.Star)
+        @Html.EditorFor(m => m.Star)
+        @Html.ValidationMessageFor(m => m.Star, "", new { @class = "text-danger " })
     </div>
-    <div class="form-group">
-        <label asp-for="Star" class="control-label"></label>
-        <input asp-for="Star" class="form-control" />
-        <span asp-validation-for="Star" class="text-danger"></span>
+    <div>
+        @Html.LabelFor(m => m.Comment)
+        @Html.TextBoxFor(m => m.Comment)
+        @Html.ValidationMessageFor(m => m.Comment, "", new { @class = "text-danger " })
     </div>
-    <div class="form-group">
-        <label asp-for="Comment" class="control-label"></label>
-        <textarea asp-for="Comment" class="form-control"></textarea>
-        <span asp-validation-for="Comment" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-primary" />
-    </div>
-</form>
+    <button type="submit">Add Review</button>
+}
 
 @section Scripts {
     @{
