--- a/MovieDB/Views/Review/Create.cshtml
+++ b/MovieDB/Views/Review/Create.cshtml
@@ -6,24 +6,35 @@
 
 <h2>Create Review</h2>
 
-<form asp-action="Create" method="post" class="form-horizontal">
+<form asp-action="Create" method="post">
     <div class="form-group">
+        <label asp-for="MovieName" class="control-label"></label>
         <input asp-for="MovieName" class="form-control" />
         <span asp-validation-for="MovieName" class="text-danger"></span>
     </div>
     <div class="form-group">
+        <label asp-for="UserName" class="control-label"></label>
         <input asp-for="UserName" class="form-control" />
         <span asp-validation-for="UserName" class="text-danger"></span>
     </div>
     <div class="form-group">
+        <label asp-for="Star" class="control-label"></label>
         <input asp-for="Star" class="form-control" />
         <span asp-validation-for="Star" class="text-danger"></span>
     </div>
     <div class="form-group">
+        <label asp-for="Comment" class="control-label"></label>
         <textarea asp-for="Comment" class="form-control"></textarea>
         <span asp-validation-for="Comment" class="text-danger"></span>
     </div>
+    <div class="form-group">
+        <input type="submit" value="Create" class="btn btn-primary" />
+    </div>
 </form>
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
 
 @section Scripts {
     @{
