--- a/MovieDB/Views/Review/Delete.cshtml
+++ b/MovieDB/Views/Review/Delete.cshtml
@@ -1,25 +1,45 @@
 ﻿@model MovieDB.Models.Review
 
+@{
+    ViewData["Title"] = "Delete Review";
+}
+
 <h2>Delete Review</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Are you sure you want to delete this review?</h4>
-    <div>
-        <strong>Movie Name:</strong> @Model.MovieName
-    </div>
-    <div>
-        <strong>User Name:</strong> @Model.UserName
-    </div>
-    <div>
-        <strong>Star:</strong> @Model.Star
-    </div>
-    <div>
-        <strong>Comment:</strong> @Model.Comment
-    </div>
-</div>
+    <h4>Review</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            Movie Name
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MovieName)
+        </dd>
+        <dt class="col-sm-2">
+            User Name
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.UserName)
+        </dd>
+        <dt class="col-sm-2">
+            Star
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Star)
+        </dd>
+        <dt class="col-sm-2">
+            Comment
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Comment)
+        </dd>
+    </dl>
 
-<form asp-action="DeleteConfirmed" method="post">
-    <input type="hidden" asp-for="MovieId" />
-    <button type="submit" class="btn btn-danger">Delete</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancel</a>
-</form>
+    <form asp-action="DeleteConfirmed" method="post">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+    </form>
+</div>
