Reviews final and readme

--- a/MovieDB/Views/Movie/ConfirmDelete.cshtml
+++ b/MovieDB/Views/Movie/ConfirmDelete.cshtml
@@ -10,6 +10,7 @@
     <h4>@Model.title</h4>
     <p>@Model.plot</p>
     <p>@Model.year</p>
+    <img src="@Model.poster" alt="movie poster" />
 </div>
 
 @using (Html.BeginForm("Delete", "Movie", new { id = Model.movieID }, FormMethod.Post))
