--- a/MovieDB/Views/MoviePlayList/Index.cshtml
+++ b/MovieDB/Views/MoviePlayList/Index.cshtml
@@ -35,7 +35,7 @@
                 </td>
                 <td>
                     <a class="btn btn-primary" href="@Url.Action("Update", new { playListId = moviePlayList.PlayListId })">Update</a>
-                    <a class="btn btn-secondary" href="@Url.Action("Delete", new { playListId = moviePlayList.PlayListId })">Delete</a>
+                    <a class="btn btn-danger" href="@Url.Action("Delete", new { playListId = moviePlayList.PlayListId })">Delete</a>
                 </td>
             </tr>
         }
