--- a/MovieDB/Views/Review/Index.cshtml
+++ b/MovieDB/Views/Review/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Reviews</h2>
 
-<table class="table" style="color: #fff>
+<table class="table" style="color: #fff">
     <thead>
         <tr>
             <th>Movie Name</th>
