--- a/MovieDB/Views/Movie/Index.cshtml
+++ b/MovieDB/Views/Movie/Index.cshtml
@@ -26,6 +26,7 @@
                 <td>@movie.poster</td>
                 <td>
                     <a class="btn btn-danger" href="@Url.Action("ConfirmDelete", new { id = movie.movieID })">Delete</a>
+                    <a class="btn btn-primary" href="@Url.Action("Create", "Review", new { selectedMovieId = movie.movieID })">Add Review</a>
                 </td>
             </tr>
         }
